<?xml version="1.0" encoding="utf-8"?>




    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".MainActivity"
        tools:showIn="@layout/app_bar_main">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:background="@color/colorAccente"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="60dp"
                android:layout_marginRight="3dp"
                android:elevation="5dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="5dp">


                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="290dp"
                    android:layout_marginTop="120dp"

                    android:layout_marginRight="10dp"
                    android:text="d"
                    android:textColor="@color/colorTxxt"
                    android:textSize="20sp"
                    android:layout_marginStart="290dp"
                    android:layout_marginEnd="10dp" />

                <TextView
                    android:id="@+id/high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="30dp"

                    android:text="@string/high"
                    android:textColor="@color/colorTxxt"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/open"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="55dp"
                    android:layout_marginTop="120dp"
                    android:text="@string/open"
                    android:textColor="@color/colorTxxt"
                    android:textSize="20sp"
                    android:layout_marginStart="55dp" />

                <TextView
                    android:id="@+id/low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="290dp"
                    android:layout_marginLeft="290dp"
                    android:layout_marginTop="30dp"
                    android:text="@string/low"
                    android:textColor="@color/colorTxxt"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="140dp"
                    android:layout_marginLeft="140dp"
                    android:layout_marginTop="180dp"
                    android:text="@string/update"
                    android:textColor="@color/colorTxxt"
                    android:textSize="12sp" />


            </android.support.v7.widget.CardView>

            <ImageView
                android:id="@+id/image_coin"
                android:layout_width="55dp"
                android:layout_height="61dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@color/colorAccente"
                android:visibility="visible"
                app:srcCompat="@drawable/ic_btc"
                tools:ignore="VectorDrawableCompat" />

            <TextView
                android:id="@+id/coinName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/rounded_corner"
                android:text="@string/bitcoin"
                android:textColor="@color/colorTxxt"
                android:textSize="30sp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="69dp"
                android:layout_height="22dp"

                android:layout_gravity="left"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="3dp"

                android:background="@drawable/roundedspinner"

                android:clickable="true"

                android:visibility="visible"
                android:layout_marginStart="3dp"
                android:focusable="true" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="248dp"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="3dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="5dp"
                app:cardElevation="5dp">

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/LineChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    >


                </com.github.mikephil.charting.charts.LineChart>


            </android.support.v7.widget.CardView>


        </LinearLayout>


    </android.support.constraint.ConstraintLayout>

